--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/node": "^20.14.10",
     "@types/react-dom": "^18.3.0",
+    "@types/styled-components": "^5.1.34",
     "buffer": "^6.0.3",
     "parcel": "^2.12.0",
     "process": "^0.11.10",
@@ -30,6 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
+    "react-query": "^3.39.3",
     "styled-components": "^6.1.12",
     "zustand": "^4.5.4"
   }
