--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-raw": "^2.12.0",
     "@types/node": "^20.14.10",
     "@types/react-dom": "^18.3.0",
     "buffer": "^6.0.3",
